crates/neo-tui/tests/snapshots/render__mind_pane_nav_decision.snap
---
source: crates/neo-tui/tests/render.rs
expression: frame
---
Stark  ○ NO MIC YET  v dictates   Esc/q chat  mind
┌ Mind · nav · running ────────────────────────────────────────────────────────────────────────────────────────────────┐
│decide    1284 ms  CLICK       Compose post                                 p=0.97 tgt=0.91  obs  41 · jev  164 · text│
│   0 · act  22 ms  [12 cands]  outward=0.08 destructive=0.01                                                          │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                ▼ live│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
NORMAL │ 1 running · Esc stops │ /fixtures/neo/neo.db v3 │ OpenAI API key · openai/gpt-5.6-sol │ keys missing: anthropic
--- styles ---
fg=Cyan bg=Reset mod=BOLD  mind
fg=DarkGray bg=Reset mod=NONE  │
fg=DarkGray bg=Reset mod=NONE  ┌ Mind · nav · running ────────────────────────────────────────────────────────────────────────────────────────────────┐
fg=DarkGray bg=Reset mod=NONE  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
fg=DarkGray bg=Reset mod=NONE  ▼ live│
fg=DarkGray bg=Reset mod=NONE  ○ NO MIC YET  v dictates   Esc/q chat
fg=Magenta bg=Reset mod=NONE  decide
fg=Reset bg=Reset mod=BOLD  Stark
fg=Yellow bg=Reset mod=NONE  NORMAL │ 1 running · Esc stops │ /fixtures/neo/neo.db v3 │ OpenAI API key · openai/gpt-5.6-sol │ keys missing: anthropic
