crates/neo-tui/tests/snapshots/render__panes_80x24.snap
---
source: crates/neo-tui/tests/render.rs
expression: "common::render(&state, 80, 24)"
---
Stark  ○ NO MIC YET  v dictates   chat · , settings · : commands · ? keys
1  Conversation    2  Runs (0/0 live)    3  Activity (0)
┌ Activity (0) ────────────────────────────────────────────────────────────────┐
│no events yet — this ring fills as the core emits AppEvents                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                        ▼ live│
└──────────────────────────────────────────────────────────────────────────────┘
> Enter sends · Alt-Enter or Ctrl-J newline · Esc leaves insert
NORMAL │ /fixtures/neo/neo.db v3 │ OpenAI API key · openai/sol-latest
--- styles ---
fg=Cyan bg=Reset mod=BOLD  Activity (0)
fg=Cyan bg=Reset mod=BOLD  chat
fg=Cyan bg=Reset mod=NONE  >
fg=DarkGray bg=Reset mod=NONE  1  Conversation    2  Runs (0/0 live)    3
fg=DarkGray bg=Reset mod=NONE  Enter sends · Alt-Enter or Ctrl-J newline · Esc leaves insert
fg=DarkGray bg=Reset mod=NONE  · , settings · : commands · ? keys
fg=DarkGray bg=Reset mod=NONE  │
fg=DarkGray bg=Reset mod=NONE  │no events yet — this ring fills as the core emits AppEvents
fg=DarkGray bg=Reset mod=NONE  ┌ Activity (0) ────────────────────────────────────────────────────────────────┐
fg=DarkGray bg=Reset mod=NONE  └──────────────────────────────────────────────────────────────────────────────┘
fg=DarkGray bg=Reset mod=NONE  ▼ live│
fg=DarkGray bg=Reset mod=NONE  ○ NO MIC YET  v dictates
fg=Reset bg=Reset mod=BOLD  Stark
fg=Yellow bg=Reset mod=NONE  NORMAL │ /fixtures/neo/neo.db v3 │ OpenAI API key · openai/sol-latest
