crates/neo-tui/tests/snapshots/render__runs_pane.snap
---
source: crates/neo-tui/tests/render.rs
expression: frame
---
Stark  ○ NO MIC YET  v dictates   Esc/q chat  runs
┌ Runs (1/2 live) ─────────────────────────────────────────────────────────────────────────────────────────────────────┐
│▸× chat failed     0:15  1 step(s)                                                                                    │
│   post the launch note                                                                                               │
│   the model could not be reached                                                                                     │
│ ▶ nav  running    0:23  3 step(s)                                                                                    │
│   https://example.com — read the headline                                                                            │
│   opened https://example.com                                                                                         │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                ▼ live│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
NORMAL │ 1 running · Esc stops │ /fixtures/neo/neo.db v3 │ OpenAI API key · openai/sol-latest │ keys missing: anthropic
--- styles ---
fg=Blue bg=Reset mod=BOLD  running
fg=Blue bg=Reset mod=NONE  nav
fg=Cyan bg=Reset mod=BOLD  runs
fg=Cyan bg=Reset mod=NONE  ▶
fg=Cyan bg=Reset mod=NONE  ▸×
fg=DarkGray bg=Reset mod=NONE  0:15  1 step(s)
fg=DarkGray bg=Reset mod=NONE  0:23  3 step(s)
fg=DarkGray bg=Reset mod=NONE  │
fg=DarkGray bg=Reset mod=NONE  │   opened https://example.com
fg=DarkGray bg=Reset mod=NONE  │   the model could not be reached
fg=DarkGray bg=Reset mod=NONE  ┌ Runs (1/2 live) ─────────────────────────────────────────────────────────────────────────────────────────────────────┐
fg=DarkGray bg=Reset mod=NONE  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
fg=DarkGray bg=Reset mod=NONE  ▼ live│
fg=DarkGray bg=Reset mod=NONE  ○ NO MIC YET  v dictates   Esc/q chat
fg=Red bg=Reset mod=BOLD  failed
fg=Red bg=Reset mod=NONE  chat
fg=Reset bg=Reset mod=BOLD  Stark
fg=Reset bg=Reset mod=BOLD  post the launch note
fg=Yellow bg=Reset mod=NONE  NORMAL │ 1 running · Esc stops │ /fixtures/neo/neo.db v3 │ OpenAI API key · openai/sol-latest │ keys missing: anthropic
